Bug 806011 - Remember URL of message opened from file so that changing the text encoding works. r=mkmelin